# ChangeLog for media-libs/fontconfig
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.110 2008/05/04 13:27:41 pva Exp $

  04 May 2008; Peter Volkov <pva@gentoo.org>
  +files/fontconfig-2.5.0-libtool-2.2.patch, fontconfig-2.5.0-r1.ebuild:
  Fixed compilation with libtool-2.2, bug #213831, thank Alessandro Guido
  for report.

  30 Mar 2008; <ricmm@gentoo.org> fontconfig-2.4.2.ebuild:
  Drop to ~mips due to unstable deps

  10 Feb 2008; Ryan Hill <dirtyepic@gentoo.org> -fontconfig-2.5.0.ebuild:
  Remove old.

  16 Jan 2008; Jeroen Roovers <jer@gentoo.org> fontconfig-2.5.0-r1.ebuild:
  Stable for HPPA (bug #205266).

  15 Jan 2008; Raúl Porcel <armin76@gentoo.org> fontconfig-2.5.0-r1.ebuild:
  alpha/ia64 stable wrt #205266

  14 Jan 2008; <welp@gentoo.org> fontconfig-2.5.0-r1.ebuild:
  Stable on amd64; bug 205266

  13 Jan 2008; nixnut <nixnut@gentoo.org> fontconfig-2.5.0-r1.ebuild:
  Stable on ppc wrt bug 205266

  12 Jan 2008; Brent Baude <ranger@gentoo.org> fontconfig-2.5.0-r1.ebuild:
  Marking fontconfig-2.5.0-r1 ppc64 for bug 205266

  12 Jan 2008; Dawid Węgliński <cla@gentoo.org>
  fontconfig-2.5.0-r1.ebuild:
  Stable on x86 (bug #205266)

  11 Jan 2008; Ferris McCormick <fmccor@gentoo.org>
  fontconfig-2.5.0-r1.ebuild:
  Sparc stable, Bug #205266

*fontconfig-2.5.0-r1 (20 Dec 2007)

  20 Dec 2007; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.5.0-r1.ebuild:
  Revision bump.  Added PDEPEND on app-admin/eselect-fontconfig.

*fontconfig-2.5.0 (14 Nov 2007)

  14 Nov 2007; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.5.0.ebuild:
  Version bump.

  02 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> fontconfig-2.4.2.ebuild:
  Use CONFIG_PROTECT_MASK to force updates to /etc/fonts/fonts.conf rather
  than nasty pkg_postinst hacks. Bug #183576 by Alan Hourihane.

  21 Jul 2007; Ryan Hill <dirtyepic@gentoo.org>
  -files/fontconfig-2.3.2-pkg_config.patch,